--- a/Newotopark/Css/islem.css
+++ b/Newotopark/Css/islem.css
@@ -13,7 +13,7 @@
 
 .islem-list{
     width: 70%;
-    margin: 100px auto;
+    margin: 20px auto;
 }
 
 
@@ -30,11 +30,23 @@
     /* border: 1px solid #222222; */
     cursor: pointer;
 }
+.islem-list .item p{
+    width: 300px;
+}
+.islem-list .item p:nth-child(2){
+    width: 450px;
+    text-align: right;
+}
+.islem-list .item p:last-child{
+    width: 350px;
+    text-align: right;
+}
+
 .islem-list .info{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    font-size: 25px;
+    justify-content: space-around;
+    font-size: 26px;
     font-weight: 300;
     padding: 0px 25px;
     border-radius: 15px;
@@ -45,31 +57,50 @@
 }
 
 .islem-list .info span{
-    padding: 10px 13px;
+    padding: 10px 18px;
     border-radius: 10px;
 }
 
 
 
+
 .islem-list .giris{
     color: white;
-    background-color: #67AE6E
+    /* background-color: #3F7D58; */
+    background-color: rgb(25, 135, 84);
+    
 }
 .islem-list .cıkıs{
-    background-color: #FF6363;
+    /* background-color: #E50046; */
+    background-color: rgb(220, 53, 69);
     color: white;
 }
 .islem-list .veresiye{
     color: white;
-    background-color: #FEBA17;
+    /* background-color: #FFA725; */
+    background-color: rgb(255, 193, 7);
+    color: black ;
+}
+.islem-list .veresiye-sil{
+    color: white;
+    /* background-color: #8F87F1; */
+    background-color: rgb(13, 202, 240);
+    color: black;
+}
+.islem-list .veresiye-ode{
+    color: white;
+    /* background-color: #1B56FD; */
+    background-color: rgb(13, 110, 253);
 }
 .islem-list .totalcıkıs{
     color: white;
-    background-color: #FE7743;
+    /* background-color: #BB3E00; */
+    background-color:  #6610f2
 }
 .islem-list .delete{
     color: white;
-    background-color: #8E1616;
+    /* background-color: #8E1616; */
+    background-color: #fd7e14;
 }
 
 .islem-list .item:hover{
@@ -79,3 +110,36 @@
 }
 
 
+
+.islem-list .request{
+    margin: 25px 0px;
+}
+.islem-list .request input{
+    width: 350px;
+    height: 60px;
+    font-size: 36px;
+    padding: 8px 12px;
+    text-transform: uppercase;
+    border-radius: 10px;
+    border: none;
+    border: 1px solid #888;
+}
+
+.islem-list .request button{
+    font-size: 22px;
+    margin-left: 30px;
+    padding: 5px 18px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    background-color: white;
+    border: 3px solid rgb(80, 176, 51);
+    height: 60px;
+}
+
+
+
+.islem-list .request button:hover{
+    background-color: rgb(80, 176, 51);
+    color: white;
+}
