--- a/Newotopark/Css/kontrol.css
+++ b/Newotopark/Css/kontrol.css
@@ -6,6 +6,30 @@
 
 
 .box{
-    width: 1000px;
-    height: 800px;
+    margin: 50px;
+    width: 90vw;
+    /* height: 800px; */
+}
+
+
+.data-equlizer{
+    margin: 50px;
+    
+}
+
+.data-equlizer button{
+    background-color: red;
+    color: white;
+    border: none;
+    border: 3px solid white;
+    padding: 10px 15px;
+    border-radius: 8px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.data-equlizer button:hover{
+    background-color: white;
+    color: red;
+    border: 3px solid red;
 }
