--- a/Newotopark/Css/liste.css
+++ b/Newotopark/Css/liste.css
@@ -37,6 +37,7 @@ body{
 .baslik{
     font-size: 26px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .liste{
@@ -49,5 +50,6 @@ body{
     display: flex;
     justify-content: space-between;
     font-size: 26px;
-    border-bottom: 1px solid #888;
+    border-bottom: 3px solid #888;
+    padding: 0 80px;
 }
