--- a/Newotopark/Css/fis.css
+++ b/Newotopark/Css/fis.css
@@ -10,24 +10,30 @@
     /* border: 1px solid red; */
     writing-mode: vertical-lr;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 150px;
 }
 
 .box h1{
-    font-size: 32px;
+    font-size: 19px;
     letter-spacing: 2px;
+    font-weight: 900;
 }
 
 .box .plaka{
     margin-right: 10px;
-    font-size: 32px;
+    font-size: 48px;
     letter-spacing: 2px;
 }
 
 .box .date{
-    margin-left: 15px;
-    margin-right: 10px;
-    font-size: 20px;
+    margin-left: px;
+    margin-right: 2px;
+    font-size: 18px;
+}
+.box .telephone{
+    /* margin-left: 15px;
+    margin-right: 10px; */
+    font-size: 16px;
 }
 
 .box .date .time{
@@ -37,6 +43,8 @@
 .box input{
     width: 0;
     height: 0;
+    margin: 0;
+    padding: 0;
     border: none;
     outline: none;
 }
