--- a/Newotopark/Css/index.css
+++ b/Newotopark/Css/index.css
@@ -18,7 +18,8 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 300px;
+    height: 250px;
+    margin-bottom: 50px;
 }
 
 .input-box input {
@@ -35,7 +36,8 @@ button {
 
 
 .number-list {
-    height: 400px;
+    /* height: 100vh - 370px; */
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,7 +52,7 @@ button {
     width: 50%;
     max-width: 1000px;
     /* height: 45px; */
-    font-size: 32px;
+    font-size: 28px;
     border-bottom: 1px dotted #888;
     border-radius: 15px;
     padding: 10px 40px;
@@ -59,7 +61,7 @@ button {
 }
 
 .number-list .item.item-activated {
-    background-color: #FED2E2;
+    background-color: #F7CFD8;
 }
 
 .number-list .findOut {
