--- a/Newotopark/Css/index.css
+++ b/Newotopark/Css/index.css
@@ -19,14 +19,14 @@ button {
     align-items: center;
     justify-content: center;
     height: 250px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .input-box input {
     width: 80%;
-    max-width: 1000px;
-    height: 200px;
-    font-size: 160px;
+    max-width: 900px;
+    height: 180px;
+    font-size: 140px;
     text-transform: uppercase;
     padding: 15px;
     border-radius: 15px;
@@ -37,7 +37,7 @@ button {
 
 .number-list {
     /* height: 100vh - 370px; */
-    height: 300px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,8 +52,8 @@ button {
     width: 50%;
     max-width: 1000px;
     /* height: 45px; */
-    font-size: 28px;
-    border-bottom: 1px dotted #888;
+    font-size: 26px;
+    border-bottom: 1px solid #888;
     border-radius: 15px;
     padding: 10px 40px;
     cursor: pointer;
